--- a/app/src/main/res/layout/activity_select_rutas.xml
+++ b/app/src/main/res/layout/activity_select_rutas.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/background_blanco"
-    tools:context=".Menu.SelectRutas">
+    tools:context=".menu.SelectRutas">
 
     <LinearLayout
         android:id="@+id/contenedorHeader"
