--- a/app/src/main/res/layout/activity_select_rutas.xml
+++ b/app/src/main/res/layout/activity_select_rutas.xml
@@ -1,87 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/background_blanco"
+    android:orientation="vertical"
     tools:context=".menu.SelectRutas">
 
-    <LinearLayout
-        android:id="@+id/contenedorHeader"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_contenedor_head"
-        android:layout_weight="10"
-        android:background="@android:color/transparent"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:paddingHorizontal="@dimen/activity_horizontal_margin">
+    <include
+        android:id="@+id/commonToolbar"
+        layout="@layout/common_toolbar" />
 
-        <ImageButton
-            android:id="@+id/imgBack"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="5dp"
-            android:layout_weight="2"
-            android:background="@android:color/transparent"
-            android:onClick="goBack"
-            android:src="@mipmap/icon_back" />
-
-        <ImageView
-            android:id="@+id/ivNameViewPager"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="5dp"
-            android:layout_weight="6"
-            android:src="@mipmap/header_tickets" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2" />
-
-
-    </LinearLayout>
-
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/contenedorHeader"
         android:padding="@dimen/activity_horizontal_margin">
 
         <Spinner
             android:id="@+id/spUsuarios"
             style="@style/SpnnerCustom"
-            android:layout_marginHorizontal="@dimen/margin_horizontal_spinner" />
+            android:layout_marginHorizontal="@dimen/margin_horizontal_spinner"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Spinner
             android:id="@+id/spInicio"
             style="@style/SpnnerCustom"
             android:layout_below="@+id/spUsuarios"
             android:layout_marginHorizontal="@dimen/margin_horizontal_spinner"
-            android:layout_marginTop="@dimen/activity_ontenedor_margin" />
+            android:layout_marginTop="@dimen/activity_ontenedor_margin"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/spUsuarios" />
 
         <Spinner
             android:id="@+id/spFin"
             style="@style/SpnnerCustom"
             android:layout_below="@+id/spInicio"
             android:layout_marginHorizontal="@dimen/margin_horizontal_spinner"
-            android:layout_marginTop="@dimen/activity_ontenedor_margin" />
+            android:layout_marginTop="@dimen/activity_ontenedor_margin"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/spInicio" />
 
 
         <LinearLayout
             android:id="@+id/contenedorCheckbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/spFin"
             android:layout_marginHorizontal="35dp"
             android:layout_marginTop="20dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/spFin">
 
             <CheckBox
                 android:id="@+id/cbAsientos"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:buttonTint="@color/colorPrimary"
@@ -92,7 +71,6 @@
                 android:id="@+id/cbPie"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:buttonTint="@color/colorPrimary"
@@ -105,11 +83,13 @@
             android:id="@+id/contenedorPrecio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/contenedorCheckbox"
             android:layout_marginHorizontal="25dp"
             android:layout_marginTop="25dp"
             android:orientation="horizontal"
-            android:weightSum="10">
+            android:weightSum="10"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/contenedorCheckbox">
 
             <LinearLayout
                 android:id="@+id/contentButton"
@@ -179,20 +159,83 @@
         <Button
             android:id="@+id/btnOlvidarRuta"
             style="@style/ButtonCustom"
-            android:layout_below="@+id/contenedorPrecio"
             android:layout_marginTop="25dp"
             android:text="Olvidar ruta"
-            android:visibility="visible" />
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/contenedorPrecio" />
+
+        <TextView
+            android:id="@+id/tvOneWay"
+            style="@style/tv_select_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="@string/one_way"
+            app:drawableStartCompat="@drawable/ic_one_way"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btnOlvidarRuta" />
+
+        <ImageView
+            android:id="@+id/removeDateOneWay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:contentDescription="@string/remove_date"
+            android:padding="8dp"
+            android:src="@drawable/ic_close"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/tvOneWay"
+            app:layout_constraintEnd_toEndOf="@+id/tvOneWay"
+            app:layout_constraintTop_toTopOf="@+id/tvOneWay" />
+
+        <TextView
+            android:id="@+id/tvBack"
+            style="@style/tv_select_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/back"
+            app:drawableStartCompat="@drawable/ic_back"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvOneWay" />
+
+        <ImageView
+            android:id="@+id/removeDateBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:contentDescription="@string/remove_date"
+            android:padding="8dp"
+            android:src="@drawable/ic_close"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/tvBack"
+            app:layout_constraintEnd_toEndOf="@+id/tvBack"
+            app:layout_constraintTop_toTopOf="@+id/tvBack" />
+
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/salesByDates"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:constraint_referenced_ids="tvBack,tvOneWay"
+            tools:visibility="visible" />
 
         <ProgressBar
             android:id="@+id/mProgressView"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
             android:layout_marginBottom="8dp"
-            android:visibility="gone" />
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="gone" />
 
 
         <Button
@@ -200,15 +243,22 @@
             style="@style/ButtonCustom"
             android:layout_alignParentBottom="true"
             android:text="Siguiente"
-            android:visibility="gone" />
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:visibility="visible" />
 
         <Button
             android:id="@+id/btnFinalizar"
             style="@style/ButtonCustom"
-            android:layout_alignParentBottom="true"
             android:text="Finalizar"
-            android:visibility="gone" />
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:visibility="gone" />
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</RelativeLayout>
+</LinearLayout>
